# ziploom

./: .cursorrules  .gitignore  .gitleaks.toml  DETECTION_CAPABILITIES.md  LICENSE  LYNID_LISTING.md  README-analysisloom.md  README-collectionloom.md  README-ziploom.md  README.md  SCREENSHOT_GUIDE.md  TRADEMARK.md  cleanup-ziploom.sh  index.html  package-lock.json  package.json  playwright.config.mjs  snapcraft.yaml  test_ziploom.sh  vite.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  ci.yml  release.yml  security-audit.yml
docs/: DEVELOPER.md  MALWARE_SCORING_ARCH.md  PANDUAN.md  PRICING.md  STORE_GUIDE.md  USER_GUIDE.md
public/shared/: theme.css
samples/: confidential_report.txt
scripts/: ensure-dist.mjs  package-releases.mjs  push-all.sh  screenshot-ziploom.sh  test-analysisloom.sh
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/ysf-core/: Cargo.toml
src-tauri/crates/ysf-core/src/: archive.rs  carving.rs  cloud.rs  crypto.rs  encryption_detect.rs  evidence.rs  forensic.rs  hashing.rs  imaging.rs  lib.rs  network.rs  ntfs.rs  preview.rs  progress.rs  ram.rs  report.rs  scanner.rs  snapshot.rs  write_blocker.rs
src-tauri/crates/ysf-core/tests/: comprehensive.rs  integration.rs
src-tauri/icons/: icon.icns
src-tauri/src/: archive_ops.rs  commands.rs  crypto.rs  filters.rs  lib.rs  license.rs  main.rs  path_safe.rs  scanner.rs
src-tauri/tests/: e2e_workflow_test.rs  edge_case_tests.rs  forensic_exam_test.rs  integration_all_features.rs  ipc_registry_test.rs  password_flow_tests.rs  scenario_tests.rs
src/lib/: Logo.svelte  compress.js  format.js  inspect.js  password.js  path.js  prefs.js  progressPoll.js  state.js  tauri.js  theme.js  toast.js
src/lib/components/: AboutTab.svelte  CompressTab.svelte  Dropzone.svelte  DropzoneArea.svelte  ExtractTab.svelte  FileIcon.svelte  InspectArchiveBar.svelte  InspectDetailPanel.svelte  InspectTab.svelte  InspectVirtualTable.svelte  PasswordDialog.svelte  ProgressBar.svelte  SettingsTab.svelte  ThemeSelector.svelte  Toast.svelte
src/routes/: +page.svelte
tests/: capture-screenshots.mjs  gui-smoke.mjs  ipc-coverage.mjs
tests/fixtures/e2e/: sample_alpha.txt  sample_beta.txt
tests/fixtures/e2e/nested/: sample_gamma.txt
