[package]
name = "ziploom"
version = "0.1.0"
description = "YSF Studio — ZipLoom Archive Utility"
authors = ["YSF Studio"]
edition = "2021"

[lib]
name = "ziploom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ysf-core = { path = "crates/ysf-core" }
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
walkdir = "2"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
