[package]
name = "ysf-core"
version = "0.1.0"
edition = "2021"
description = "Shared core library for YSF Forensic Suite"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
blake3 = "1"
twox-hash = "1"
ed25519-dalek = "2"
rand = "0.8"
qrcode = { version = "0.14", default-features = false }
printpdf = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
zip = { version = "1", default-features = false, features = ["deflate", "bzip2", "zstd", "aes-crypto"] }
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"
sevenz-rust = { version = "0.6", features = ["aes256"] }
unrar = "0.5"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
# ntfs = "0.7"  # Using custom MFT parser in ntfs.rs
fatfs = "0.3"
log = "0.4"
image = "0.25"
base64 = "0.22"
crc32fast = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"

[target.'cfg(unix)'.dependencies]
pcap = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winioctl", "fileapi", "handleapi", "winnt"] }

[lib]
name = "ysf_core"
path = "src/lib.rs"
